package naothmessages;
option java_package= "de.hu_berlin.informatik.ki.nao.messages";
option java_outer_classname = "ImageMsg";

import "CameraInfo.proto";

message Image {
  
  enum Format {
    YUV = 0;
    YUV422 = 1;
  }
  
  required bytes data = 1;
  optional int32 width = 2 [default=320];
  optional int32 height = 3 [default=240];
  
  optional CameraInfo cameraInfo = 4;
  
  optional Format format = 5 [default=YUV];
}
